src/components/Sidebar/sidebar.css
/* ... */
aside :where(label, .list-btn-wrapper) {
  padding: 0px 1.5rem;
}

.system-list-wrapper,
.mylist-wrapper {
  display: grid;
  gap: var(--list-gap);
}

.mylist-wrapper {
  grid-auto-rows: min-content;
}

.system-list-wrapper {
  margin-bottom: var(--list-gap);
}

.side-panel.mobile {
  position: fixed;
  top: 0;
  left: 0;
  width: 65%;
  transform: translateX(-100%);
}

.side-panel.mobile.open {
  transform: translateX(0);
}

.side-panel.desktop {
  position: static;
  width: 17rem;
  transform: translateX(0);
}

.side-panel.desktop.hidden {
  transform: translateX(-100%);
}

